tests/e2e/foreach_output_required.error
Error: syntax error in story at line 1, column 9

1|    foreach items
              ^^^^^

E0064: Foreach blocks require an output (e.g. `as item`)
